[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/xiao_sus_3.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/particle.png" type="Texture" id=3]
[ext_resource path="res://assets/shaders/dash.material" type="Material" id=4]
[ext_resource path="res://src/Actors/player_shader_material.tres" type="Material" id=5]
[ext_resource path="res://assets/xiao sprites.png" type="Texture" id=6]
[ext_resource path="res://assets/particles/plungeparticle.png" type="Texture" id=7]
[ext_resource path="res://src/Actors/plunge particle shader.tres" type="Material" id=8]
[ext_resource path="res://assets/dash.wav" type="AudioStream" id=9]
[ext_resource path="res://assets/xiao jump.png" type="Texture" id=10]
[ext_resource path="res://assets/xiao jumping.png" type="Texture" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 40, 41 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 11 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 32, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 6 )
region = Rect2( 64, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 96, 0, 32, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 160, 0, 32, 64 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "jumping",
"speed": 8.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "standing",
"speed": 1.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 8 ) ],
"loop": true,
"name": "running",
"speed": 10.0
} ]

[node name="Player" type="KinematicBody2D"]
collision_mask = 10
script = ExtResource( 2 )
speed = Vector2( 300, 500 )
gravity = 500.0
sprint_speed = 1000

[node name="Player" type="Sprite" parent="."]
visible = false
material = ExtResource( 5 )
position = Vector2( -2, -73 )
scale = Vector2( 2.453, 2.274 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -41 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -7, -95 )
current = true
zoom = Vector2( 0.7, 0.7 )
drag_margin_v_enabled = true
smoothing_enabled = true
drag_margin_top = 0.69

[node name="PlayerAnimation" type="AnimatedSprite" parent="."]
material = ExtResource( 5 )
position = Vector2( -2, -73 )
scale = Vector2( 2.453, 2.274 )
frames = SubResource( 2 )
animation = "jumping"
frame = 1

[node name="DashParticle" type="Particles2D" parent="."]
position = Vector2( -5, -93 )
emitting = false
amount = 200
lifetime = 0.2
preprocess = 0.1
local_coords = false
process_material = ExtResource( 4 )
texture = ExtResource( 3 )

[node name="PlungeParticle" type="Particles2D" parent="."]
visible = false
position = Vector2( -5, -93 )
amount = 1000
preprocess = 1.0
local_coords = false
process_material = ExtResource( 8 )
texture = ExtResource( 7 )

[node name="DashSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="SkillCoolDown" type="Timer" parent="."]

[connection signal="timeout" from="SkillCoolDown" to="." method="_on_Timer_timeout"]
